Website Builder - Progress Report #7: - Fixed width and height size problem in new elements created... - fixed the information image not showing properly.

--- a/JS Projects/website_builder/styles/style.css
+++ b/JS Projects/website_builder/styles/style.css
@@ -154,9 +154,10 @@
                 top: 0;
 
                 border-radius: 50%;
-                background-image: url("../../../images/information.png");
+                background-image: url("../images/information-symbol.png");
                 background-position: center center;
                 background-repeat: no-repeat;
+                background-size: cover;
                 object-fit: cover;
                 background-color: white;
             }
